--- a/templates/user_main.html
+++ b/templates/user_main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>用户主页</title>
+    <title>用户 | 主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
@@ -35,7 +35,7 @@
                     <div class="card-body">
                         <h3 class="card-title">查询</h3>
                         <p class="card-text">点击按钮，<mark>查询</mark>用户公开信息。</p>
-                        <input class="btn btn-primary" type="button" value="查询" onclick="location.href='/search/'">
+                        <input class="btn btn-primary" type="button" value="查询" onclick="location.href='/app/search_user/'">
                     </div>
                 </div>
             </div>
