--- a/templates/admin_main.html
+++ b/templates/admin_main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理员控制台</title>
+    <title>管理员 | 控制台</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
@@ -33,11 +33,11 @@
                         操作1
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">查询</h3>
+                        <h3 class="card-title">查询用户</h3>
                         <br>
-                        <p class="card-text">点击按钮，<mark>查询</mark>用户信息。</p>
-                        <br>
-                        <input class="btn btn-primary" type="button" value="查询信息" onclick="location.href='/search/'">
+                        <p class="card-text">点击按钮，<mark>查询</mark>用户基本信息。</p>
+                        <br><br>
+                        <input class="btn btn-primary" type="button" value="查询信息" onclick="location.href='/app/search_user/'">
                     </div>
                 </div>
             </div>
@@ -47,11 +47,11 @@
                         操作2
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">修改</h3>
+                        <h3 class="card-title">修改用户特权</h3>
                         <br>
-                        <p class="card-text">点击按钮，<mark>修改</mark>用户权限。</p>
+                        <p class="card-text">点击按钮，<mark>修改</mark>用户的特殊权限。特殊权限与用户角色和属组无关。</p>
                         <br>
-                        <input class="btn btn-primary" type="button" value="修改权限" onclick="location.href='/search/'">
+                        <input class="btn btn-primary" type="button" value="修改权限" onclick="location.href='/app/modify_special_authority/'">
                     </div>
                 </div>
             </div>
