--- a/templates/search_user.html
+++ b/templates/search_user.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>主页</title>
+    <title>查询用户</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
+    {% if user=='000000' %}
+    <div class="container-fluid p-5 bg-warning text-black text-center">
+        <h1>查询用户</h1>
+        <h4>输入用户信息进行查询，结果将以列表呈现</h4>
+    </div>
+    {% else %}
     <div class="container-fluid p-5 bg-primary text-white text-center">
         <h1>查询用户</h1>
-        <h4>输入用户ID进行查询，结果将以列表呈现</h4>
+        <h4>输入用户信息进行查询，结果将以列表呈现</h4>
     </div>
+    {% endif %}
     <div class="container my-3">
         <div class="row">
             <div class="col-2">
@@ -32,7 +39,7 @@
         </div>
     </div>
     <div class="container my-2">
-        <form method="post" enctype="multipart/form-data" action="/search/">
+        <form method="post" enctype="multipart/form-data" action="/app/search_user/">
             <div class="row">
                 <div class="col-3"></div>
                 <label for="ID" class="col-2 col-form-label">输入用户ID/姓名/昵称: </label>
@@ -46,10 +53,10 @@
             </div>
         </form>
     </div>
-    <div class="container my-5 text-center">
+    <div class="container my-3 text-center">
         <p id="alertInfo"></p>
     </div>
-    <div class="container my-5">
+    <div class="container my-2">
         <table class="table table-striped table-hover table-light" border="1" id="info">
             <thead>
                 <tr>
@@ -80,16 +87,6 @@
         </table>
         <p id="test"></p>
     </div>
-    <div class="container text-center fixed-bottom">
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-                <p><span class="badge rounded-pill bg-success" style="font-size: 15px">Python安全编程·实验测试网页</span></p>
-                <p class="text-muted"><small>请使用电脑端最新版本浏览器访问，并保持页面原始缩放比例，以获得最佳浏览效果。</small></p>
-            </div>
-            <div class="col-2"></div>
-        </div>
-    </div>
     <script>
         function check_validity() {
             let x = document.getElementById("ID").value;
@@ -102,6 +99,5 @@
             }
         }
     </script>
-    
 </body>
 </html>
