--- a/templates/search_user.html
+++ b/templates/search_user.html
@@ -9,13 +9,30 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
+    {% if flag=='1' %}
+    <div class="container">
+        <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+          <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+              <img src="{{ url_for('static', filename='favicon.ico') }}" class="rounded me-2" alt="...">
+              <strong class="me-auto">WebAuthSystem</strong>
+              <small>right now</small>
+              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body text-center">
+              查询成功！
+            </div>
+          </div>
+        </div>
+    </div>
+    {% endif %}
     {% if user=='000000' %}
-    <div class="container-fluid p-5 bg-warning text-black text-center">
+    <div class="container-fluid p-3 bg-warning text-black text-center shadow-lg">
         <h1>查询用户</h1>
         <h4>输入用户信息进行查询，结果将以列表呈现</h4>
     </div>
     {% else %}
-    <div class="container-fluid p-5 bg-primary text-white text-center">
+    <div class="container-fluid p-3 bg-primary text-white text-center shadow-lg">
         <h1>查询用户</h1>
         <h4>输入用户信息进行查询，结果将以列表呈现</h4>
     </div>
@@ -88,6 +105,9 @@
         <p id="test"></p>
     </div>
     <script>
+        var toastLive = document.getElementById('liveToast')
+        var toast = new bootstrap.Toast(toastLive);
+        toast.show();
         function check_validity() {
             let x = document.getElementById("ID").value;
             if (x.search("union") != -1 || x.search("UNION") != -1 || x.search(";") != -1 || x.search("#") != -1) {
