--- a/templates/download_file.html
+++ b/templates/download_file.html
@@ -97,7 +97,7 @@
                     <td>{{res[i][4]}}</td>
                     <td>
                         <form method="post" enctype="multipart/form-data" action="/app/download_file/">
-                            <button type="submit" value="{{res[i][0]}}" class="btn btn-outline-primary btn-sm" name="downloadbtn_2">下载</button>
+                            <button type="submit" value="{{res[i][0]}}" class="btn btn-outline-primary btn-sm" name="downloadbtn">下载</button>
                         </form>
                     </td>
                 </tr>
