--- a/templates/login.html
+++ b/templates/login.html
@@ -79,8 +79,8 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <p><span class="badge rounded-pill bg-success" style="font-size: 15px">Python安全编程·实验测试网页</span></p>
-                <p class="text-muted"><small>请使用电脑端最新版本浏览器访问，并保持页面原始缩放比例，以获得最佳浏览效果。</small></p>
+                <p class="text-danger"><small>请使用<strong>电脑端</strong>最新版本浏览器访问，并保持页面<strong>原始缩放比例</strong>，以获得最佳浏览效果</small></p>
+                <p><span class="badge rounded-pill bg-primary" style="font-size: 15px">Micro-Auth-System | v2.1</span><span class="badge rounded-pill bg-success" style="font-size: 15px">© 2022 wangzs.net</span></p>
             </div>
             <div class="col-2"></div>
         </div>
