--- a/templates/manage_role_rule.html
+++ b/templates/manage_role_rule.html
@@ -13,6 +13,39 @@
         <h1>角色管理</h1>
         <h4>管理角色及其应用访问权限</h4>
     </div>
+    {% if flag=='3' %}
+    <div class="container">
+        <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+          <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+              <img src="{{ url_for('static', filename='favicon.ico') }}" class="rounded me-2" alt="...">
+              <strong class="me-auto">WebAuthSystem</strong>
+              <small>right now</small>
+              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body text-center">
+              修改成功！
+            </div>
+          </div>
+        </div>
+    </div>
+    {% elif flag=='-1' %}
+    <div class="container">
+        <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+          <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+              <img src="{{ url_for('static', filename='favicon.ico') }}" class="rounded me-2" alt="...">
+              <strong class="me-auto">WebAuthSystem</strong>
+              <small>right now</small>
+              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body text-center">
+              您不能对超级管理员 ID:{{userId}} 所属角色进行修改！
+            </div>
+          </div>
+        </div>
+    </div>
+    {% endif %}
     <div class="container my-3">
         <div class="row">
             <div class="col-3">
@@ -26,12 +59,119 @@
             <div class="col-8"></div>
             <div class="col-1">
                 <form method="GET" action="{{ '/user_main/' + current_user.id + '/' }}">
-                    <button type="submit" class="btn btn-outline-success">回主页</button>
+                    <button type="submit" class="btn btn-outline-success float-end">回主页</button>
                 </form>
             </div>
         </div>
     </div>
-
+    {% if flag=='1' or flag=='-1' %}
+    <div class="container my-3">
+        <table class="table table-striped table-hover table-light" border="1" id="info">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">角色名</th>
+                    <th scope="col">角色等级</th>
+                    <th scope="col">角色描述</th>
+                    <th scope="col">当前应用访问规则</th>
+                    <th scope="col">操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in range(lenres) %}
+                <tr>
+                    <th scope="row">{{i+1}}</th>
+                    <td>{{roleInfo[i][0]}}</td>
+                    <td>{{roleInfo[i][1]}}</td>
+                    <td>{{roleInfo[i][2]}}</td>
+                    <td>{{roleInfo[i][3]}}</td>
+                    <td>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{(i+1)}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                                可访问应用
+                              </button>
+                            </h2>
+                            <div id="flush-collapse{{(i+1)}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
+                              <div class="accordion-body">
+                                  {% for each in roleInfo[i][4] %}
+                                  {{each[0]}} | {{each[1]}}<br>
+                                  {% endfor %}
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </td>
+                    <td>
+                        <form method="post" enctype="multipart/form-data" action="{{ '/app/manage_role_rule/' + roleInfo[i][0] + '/'}}">
+                            <button type="submit" value="{{roleInfo[i][0]}}" class="btn btn-warning btn" name="modifybtn">修改</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% elif flag=='2' or flag=='3' %}
+    <div class="container my-3">
+        <p class="fw-bold text-center" style="font-size: 25px">修改 ID: {{roleId}} 角色的权限</p>
+        <p class="fw-bold text-center text-danger">注意，如果用户所在组允许其访问某个应用，或是已为其分配了该应用的访问特权，那么其仍能访问该应用。</p>
+        <table class="table table-striped table-hover table-light" border="1" id="roleInfo">
+            <thead>
+                <tr>
+                    <th scope="col">角色ID</th>
+                    <th scope="col">角色名</th>
+                    <th scope="col">角色等级</th>
+                    <th scope="col">角色描述</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{roleInfo[0][0]}}</td>
+                    <td>{{roleInfo[0][1]}}</td>
+                    <td>{{roleInfo[0][2]}}</td>
+                    <td>{{roleInfo[0][3]}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <table class="table table-striped table-hover table-light" border="1" id="roleRuleInfo">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">应用ID</th>
+                    <th scope="col">应用名</th>
+                    <th scope="col">应用描述</th>
+                    <th scope="col">当前应用访问规则</th>
+                    <th scope="col">操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in range(lenRuleInfo) %}
+                    <tr>
+                        <th scope="row">{{i+1}}</th>
+                        <td>{{ruleInfo[i][0]}}</td>
+                        <td>{{ruleInfo[i][1]}}</td>
+                        <td>{{ruleInfo[i][2]}}</td>
+                        <td>{{ruleInfo[i][3]}}访问</td>
+                        <td>
+                            {% if ruleInfo[i][3]=='拒绝' %}
+                            <form method="post" enctype="multipart/form-data" action="{{ '/app/manage_role_rule/' + roleId + '/implement/'}}">
+                                <button type="submit" value="{{ruleInfo[i][0]}}" class="btn btn-success" name="permitbtn">允许</button>
+                            </form>
+                            {% elif ruleInfo[i][3]=='允许' %}
+                            <form method="post" enctype="multipart/form-data" action="{{ '/app/manage_role_rule/' + roleId + '/implement/'}}">
+                                <button type="submit" value="{{ruleInfo[i][0]}}" class="btn btn-danger" name="denybtn">拒绝</button>
+                            </form>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% endif %}
     <script>
         var toastLive = document.getElementById('liveToast')
         var toast = new bootstrap.Toast(toastLive);
