--- a/templates/modify_special_authority.html
+++ b/templates/modify_special_authority.html
@@ -26,7 +26,7 @@
             <div class="col-8"></div>
             <div class="col-1">
                 <form method="GET" action="{{ '/user_main/' + current_user.id + '/' }}">
-                    <button type="submit" class="btn btn-outline-success">回主页</button>
+                    <button type="submit" class="btn btn-outline-success float-end">回主页</button>
                 </form>
             </div>
         </div>
